--- a/src/components/MarkManager/index.css
+++ b/src/components/MarkManager/index.css
@@ -22,8 +22,10 @@
   
   .mark-rect {
     position: absolute;
-    border: 2px solid red;
-    background: rgb(0, 0, 0, 0.6);
+    left: 0;
+    top: 0;
+    /* border: 2px solid red;
+    background: rgb(0, 0, 0, 0.6); */
   }
   
   .mark-rect .icon::before {
