future: custom image list

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,10 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>catalog</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <script>
+    window.imageList = [
+      'test',
+    ];
+  </script>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div className="preload" >Loading ...</div>
+  </div>
 </body>
 
 </html>
