--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,13 +5,28 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>catalog</title>
+  <title>AI Image mark</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <script>
     window.imageList = [
       'test',
+      '123'
     ];
   </script>
+  <style>
+    #root {
+      width: 100%;
+      height: 100%;
+    }
+    .preload{
+      width: 100%;
+      height: 100%;
+      background: #ddffdd;
+      text-align: center;
+      font-size: 32px;
+      padding-top: 100px;
+    }
+  </style>
 </head>
 
 <body>
