--- a/src/components/MarkManager/index.css
+++ b/src/components/MarkManager/index.css
@@ -63,6 +63,11 @@
     right: 5px;
     top: 0;
   }
+  .custom-form select,
   .custom-form input {
     color: black;
+    width: 100%;
+  }
+  .custom-form input.btn {
+    width: auto;
   }
