--- a/src/global.less
+++ b/src/global.less
@@ -1,14 +1,15 @@
 // @import './assets/iconfont/iconfont.css';
 
 
-.ant-layout {
-  .ant-layout-content {
-      min-height: 700px;
+.app-layout {
+  height: 100%;
+  .layout-content {
+      height: calc(100% - 50px);
   }
-  .ant-layout-content > div{
+  .page-content {
       width: 1200px;
-      height: 100%;
+      height: calc(100% - 30px);
       margin: 0 auto;
-      padding: 40px 0px;
+      padding: 20px 0px;
   }
 }
