--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,32 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>AI Image mark</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <script>
-    window.imageList = [
-      'test',
-      '123'
-    ];
-  </script>
-  <style>
-    #root {
-      width: 100%;
-      height: 100%;
-    }
-    .preload{
-      width: 100%;
-      height: 100%;
-      background: #ddffdd;
-      text-align: center;
-      font-size: 32px;
-      padding-top: 100px;
-    }
-  </style>
+  <script src="/config.js"></script>
 </head>
 
 <body>
-  <div id="root">
-    <div className="preload" >Loading ...</div>
-  </div>
 </body>
 
 </html>
